--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "access": "public",
   "scripts": {
     "build": "tsc",
-    "site": "npx hot-server --port=5001",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,12 +20,11 @@
     "1spec": "./src/cli.ts",
     "testall": "./src/cli.ts"
   },
-  "dependencies": {
-    "undici-types": "~7.16.0",
-    "@types/node": "latest"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "latest"
+    "typescript": "latest",
+    "undici-types": "latest",
+    "@types/node": "latest"
   },
   "repository": {
     "type": "git",
