--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist",
+    "src",
+    "packages",
+    "types",
+    "README.md",
+    "CHANGELOG.md",
+    "logo.png"
+  ],
   "keywords": [],
   "author": "suissAI",
   "license": "Cogfulness Ethical License (CEL) v1.0",
